gccida/c1/free_for_value_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/reload1.c:5472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/reload1.c:5474:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/reload1.c:5470:10: error: conflicting types for 'free_for_value_p'
__int64  free_for_value_p( 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/reload1.c:417:12: note: previous declaration is here
static int free_for_value_p             PARAMS ((int, enum machine_mode, int,
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/reload1.c:5488:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = ( ( unsigned int)( mode_class_0[mode] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/free_for_value_p/src/obj/reload1.o] Error 1
